精简package 修改换行符

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "globle": "cnpm i rimraf npm-check-updates @vue/cli -g",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
+    "lint": "vue-cli-service lint --fix",
     "inspect": "vue-cli-service inspect",
     "template": "plop",
     "clear": "rimraf node_modules&&cnpm i",
